--- a/client/app/core/invoice/gst/invoice-gst-list/invoice-gst-list.component.html
+++ b/client/app/core/invoice/gst/invoice-gst-list/invoice-gst-list.component.html
@@ -18,7 +18,7 @@
           <button type="button" class="btn btn-white" (click)="viewDetails()">
             <span class="fa fa-copy"></span>
           </button>
-          <button type="button" class="btn btn-white" (click)="viewDetails()">
+          <button type="button" class="btn btn-white" (click)="removeInvoice()">
             <span class="fa fa-times"></span>
           </button>
         </div>
@@ -49,7 +49,7 @@
           [ngClass]="{active: invoice._id == invoiceService.active._id}">
         <td>{{ invoice._id }}</td>
         <td>{{ invoice.date | date: 'dd-MM-yyyy' }}</td>
-        <td>{{ invoice.clientName }}</td>
+        <td>{{ invoice.recipientName }}</td>
         <td class="data-currency hidden-xs">{{ invoice.amount }}</td>
         <td class="data-currency hidden-xs">{{ invoice.vatAmount }}</td>
         <td class="data-currency">{{ invoice.grandTotal }}</td>
