Finish BOS Print

--- a/client/app/core/invoice/bos/invoice-bos-editor/invoice-bos-editor.component.html
+++ b/client/app/core/invoice/bos/invoice-bos-editor/invoice-bos-editor.component.html
@@ -59,78 +59,78 @@
         </div>
         <div class="col-md-pull-2 col-sm-8 col-sm-pull-6">
           <div class="row">
-          <div class="col-sm-6">
-            <div class="form-group">
-              <label class="control-label" for="recipientName">Recipient Name</label>
-              <input type="text" id="recipientName"
-                     formControlName="recipientName"
-                     class="form-control">
-            </div>
-            <div class="form-group">
-              <label class="control-label" for="recipientAddress">Recipient Address</label>
-              <textarea id="recipientAddress"
-                        formControlName="recipientAddress"
-                        class="form-control"
-                        rows="3"
-                        style="resize: none;"></textarea>
-            </div>
-            <div class="row">
-              <div class="form-group col-xs-8">
-                <label class="control-label" for="recipientState">Recipient State</label>
-                <input type="text" id="recipientState"
-                       formControlName="recipientState"
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label class="control-label" for="recipientName">Recipient Name</label>
+                <input type="text" id="recipientName"
+                       formControlName="recipientName"
                        class="form-control">
               </div>
-              <div class="form-group col-xs-4 xs-clear-padding-left">
-                <label class="control-label" for="recipientStateCode">Code</label>
-                <input type="text" id="recipientStateCode"
-                       formControlName="recipientStateCode"
-                       class="form-control">
+              <div class="form-group">
+                <label class="control-label" for="recipientAddress">Recipient Address</label>
+                <textarea id="recipientAddress"
+                          formControlName="recipientAddress"
+                          class="form-control"
+                          rows="3"
+                          style="resize: none;"></textarea>
               </div>
-            </div>
-            <div class="form-group">
-              <label class="control-label" for="recipientGSTIN">Recipient GSTIN</label>
-              <input type="text" id="recipientGSTIN"
-                     formControlName="recipientGSTIN"
-                     class="form-control">
-            </div>
-          </div>
-          <div class="col-sm-6">
-            <div class="form-group">
-              <label class="control-label" for="consigneeName">Consignee Name</label>
-              <input type="text" id="consigneeName"
-                     formControlName="consigneeName"
-                     class="form-control">
-            </div>
-            <div class="form-group">
-              <label class="control-label" for="consigneeAddress">Consignee Address</label>
-              <textarea id="consigneeAddress"
-                        formControlName="consigneeAddress"
-                        class="form-control"
-                        rows="3"
-                        style="resize: none;"></textarea>
-            </div>
-            <div class="row">
-              <div class="form-group col-xs-8">
-                <label class="control-label" for="consigneeState">Consignee State</label>
-                <input type="text" id="consigneeState"
-                       formControlName="consigneeState"
-                       class="form-control">
+              <div class="row">
+                <div class="form-group col-xs-8">
+                  <label class="control-label" for="recipientState">Recipient State</label>
+                  <input type="text" id="recipientState"
+                         formControlName="recipientState"
+                         class="form-control">
+                </div>
+                <div class="form-group col-xs-4 xs-clear-padding-left">
+                  <label class="control-label" for="recipientStateCode">Code</label>
+                  <input type="text" id="recipientStateCode"
+                         formControlName="recipientStateCode"
+                         class="form-control">
+                </div>
               </div>
-              <div class="form-group col-xs-4 xs-clear-padding-left">
-                <label class="control-label" for="consigneeStateCode">Code</label>
-                <input type="text" id="consigneeStateCode"
-                       formControlName="consigneeStateCode"
+              <div class="form-group">
+                <label class="control-label" for="recipientGSTIN">Recipient GSTIN</label>
+                <input type="text" id="recipientGSTIN"
+                       formControlName="recipientGSTIN"
                        class="form-control">
               </div>
             </div>
-            <div class="form-group">
-              <label class="control-label" for="consigneeGSTIN">Consignee GSTIN</label>
-              <input type="text" id="consigneeGSTIN"
-                     formControlName="consigneeGSTIN"
-                     class="form-control">
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label class="control-label" for="consigneeName">Consignee Name</label>
+                <input type="text" id="consigneeName"
+                       formControlName="consigneeName"
+                       class="form-control">
+              </div>
+              <div class="form-group">
+                <label class="control-label" for="consigneeAddress">Consignee Address</label>
+                <textarea id="consigneeAddress"
+                          formControlName="consigneeAddress"
+                          class="form-control"
+                          rows="3"
+                          style="resize: none;"></textarea>
+              </div>
+              <div class="row">
+                <div class="form-group col-xs-8">
+                  <label class="control-label" for="consigneeState">Consignee State</label>
+                  <input type="text" id="consigneeState"
+                         formControlName="consigneeState"
+                         class="form-control">
+                </div>
+                <div class="form-group col-xs-4 xs-clear-padding-left">
+                  <label class="control-label" for="consigneeStateCode">Code</label>
+                  <input type="text" id="consigneeStateCode"
+                         formControlName="consigneeStateCode"
+                         class="form-control">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="control-label" for="consigneeGSTIN">Consignee GSTIN</label>
+                <input type="text" id="consigneeGSTIN"
+                       formControlName="consigneeGSTIN"
+                       class="form-control">
+              </div>
             </div>
-          </div>
           </div>
         </div>
         <div class="clearfix"></div>
@@ -175,43 +175,8 @@
                 <div class="col-md-1 col-sm-2 col-xs-4 xs-clear-padding-left hidden-xs">
                   <div class="form-group text-right">
                     <label class="control-label" for="{{ 'item' + i + 'Amount'}}">Amount</label>
-                    <input type="text" id="{{ 'item' + i + 'Amount'}}"
-                           [value]="invoiceItem.get('amount').value | number: '1.0-0'"
-                           class="form-control text-right"
-                           readonly disabled>
-                  </div>
-                </div>
-                <div class="col-md-1 col-sm-2 col-xs-4">
-                  <div class="form-group text-right">
-                    <label class="control-label" for="{{ 'item' + i + 'cgst'}}">CGST</label>
-                    <input type="number" id="{{ 'item' + i + 'cgst'}}"
-                           formControlName="cgst"
-                           class="form-control text-right">
-                  </div>
-                </div>
-                <div class="col-md-1 col-sm-2 col-xs-4 xs-clear-padding-left">
-                  <div class="form-group text-right">
-                    <label class="control-label" for="{{ 'item' + i + 'sgst'}}">SGST</label>
-                    <input type="number" id="{{ 'item' + i + 'sgst'}}"
-                           formControlName="sgst"
-                           class="form-control text-right">
-                  </div>
-                </div>
-                <div class="col-md-1 col-sm-2 col-xs-4 xs-clear-padding-left">
-                  <div class="form-group text-right">
-                    <label class="control-label" for="{{ 'item' + i + 'igst'}}">IGST</label>
-                    <input type="number" id="{{ 'item' + i + 'igst'}}"
-                           formControlName="igst"
-                           class="form-control text-right">
-                  </div>
-                </div>
-                <div class="col-md-1 col-sm-2 col-xs-4 xs-clear-padding-left hidden-xs">
-                  <div class="form-group text-right">
-                    <label class="control-label" for="{{ 'item' + i + 'tax'}}">Total Tax</label>
-                    <input type="text" id="{{ 'item' + i + 'tax'}}"
-                           [value]="invoiceItem.get('itemTax').value | number: '1.2-2'"
-                           class="form-control text-right"
-                           readonly disabled>
+                    <app-formatted-readonly-number id="{{ 'item' + i + 'Amount'}}"
+                                                   formControlName="amount" [format]="'1.2-2'"></app-formatted-readonly-number>
                   </div>
                 </div>
                 <div class="col-sm-6 col-xs-12">
@@ -239,34 +204,8 @@
           <div class="form-group text-right">
             <label class="col-sm-6 control-label" for="amount">Total Amount</label>
             <div class="col-sm-6">
-              <!--<app-formatted-readonly-number id="amount"-->
-                                             <!--formControlName="amount" [format]="'1.2-2'"></app-formatted-readonly-number>-->
-              <input type="text" id="amount"
-                     [value]="invoiceForm.get('amount').value | number: '1.2-2'"
-                     class="form-control text-right"
-                     readonly disabled>
-            </div>
-          </div>
-          <div class="form-group text-right">
-            <label class="col-sm-6 control-label" for="totalGSTValue">GST</label>
-            <div class="col-sm-6">
-              <!--<app-formatted-readonly-number id="totalGSTValue"-->
-                                             <!--formControlName="totalGSTValue" [format]="'1.2-2'"></app-formatted-readonly-number>-->
-              <input type="text" id="totalGSTValue"
-                     [value]="invoiceForm.get('totalGSTValue').value | number: '1.2-2'"
-                     class="form-control text-right"
-                     readonly disabled>
-            </div>
-          </div>
-          <div class="form-group text-right">
-            <label class="col-sm-6 control-label" for="grandTotal">Grand Total</label>
-            <div class="col-sm-6">
-              <!--<app-formatted-readonly-number id="grandTotal"-->
-                                             <!--formControlName="grandTotal" [format]="'1.2-2'"></app-formatted-readonly-number>-->
-              <input type="text" id="grandTotal"
-                     [value]="invoiceForm.get('grandTotal').value | number: '1.2-2'"
-                     class="form-control text-right"
-                     readonly disabled>
+              <app-formatted-readonly-number id="amount"
+                                             formControlName="amount" [format]="'1.2-2'"></app-formatted-readonly-number>
             </div>
           </div>
         </div>
@@ -275,7 +214,6 @@
         </div>
       </form>
       <div class="col-md-4 col-md-pull-4 col-sm-6" style="padding-top: 15px;">
-        <!--<button type="submit" class="btn btn-primary">Save</button>-->
         <button type="button" class="btn btn-primary" [disabled]="!invoiceService.active || invoiceForm.dirty" (click)="onPrint()">Print
         </button>
         <div class="checkbox">
@@ -297,7 +235,7 @@
         </div>
       </div>
       <div class="clearfix"></div>
-      <app-invoice-gst-print #previewtax [invoice]="invoiceService.active" [fullRounding]="fullRounding" [copies]="copies"></app-invoice-gst-print>
+      <app-invoice-bos-print #previewtax [invoice]="invoiceService.active" [fullRounding]="fullRounding" [copies]="copies"></app-invoice-bos-print>
     </div>
   </div>
 </div>
