--- a/client/app/view/side-nav/side-nav.component.html
+++ b/client/app/view/side-nav/side-nav.component.html
@@ -27,10 +27,13 @@
         <a [routerLink]="['/invoices']"><i class="fa fa-inr"></i> <span class="nav-label">Invoice</span></a>
       </li>
       <li routerLinkActive="active">
-        <a [routerLink]="['/invoice-vat']"><i class="fa fa-inr"></i> <span class="nav-label">Invoice VAT</span></a>
+        <a [routerLink]="['/invoice-vat']"><i class="fa fa-inr"></i> <span class="nav-label">VAT Invoice</span></a>
       </li>
       <li routerLinkActive="active">
-        <a [routerLink]="['/invoice-gst']"><i class="fa fa-inr"></i> <span class="nav-label">Invoice GST</span></a>
+        <a [routerLink]="['/invoice-gst']"><i class="fa fa-inr"></i> <span class="nav-label">Tax Invoice</span></a>
+      </li>
+      <li routerLinkActive="active">
+        <a [routerLink]="['/invoice-bos']"><i class="fa fa-inr"></i> <span class="nav-label">Bill of Supply</span></a>
       </li>
       <li routerLinkActive="active">
         <a [routerLink]="['/dc']"><i class="fa fa-truck"></i> <span class="nav-label">Delivery Challan</span></a>
