--- a/client/app/core/invoice/bos/invoice-bos-print/invoice-bos-print.component.html
+++ b/client/app/core/invoice/bos/invoice-bos-print/invoice-bos-print.component.html
@@ -1,10 +1,10 @@
-<div id="invoice-gst-print" *ngIf="invoice" style="display: none;">
+<div id="invoice-bos-print" *ngIf="invoice" style="display: none;">
   <div *ngFor="let copyTitle of copiesTitles">
     <div style="page-break-after: always">
-      <div class="col-lg-12 invoice-preview invoice-gst-page" style="padding: 0;">
+      <div class="col-lg-12 invoice-preview invoice-bos-page" style="padding: 0;">
         <div class="invoice-details">
           <div class="col-xs-5" style="padding-left: 0;">
-            <h2 class="invoice-heading"><b>Tax Invoice</b></h2>
+            <h2 class="invoice-heading"><b>Bill of Supply</b></h2>
             <h3>{{copyTitle}}</h3>
           </div>
           <div class="col-xs-3"></div>
@@ -56,13 +56,10 @@
         <table class="invoice-item">
           <colgroup></colgroup>
           <colgroup style="width: 100%;"></colgroup>
-          <colgroup style="width: 0;"></colgroup>
-          <colgroup style="width: 0;"></colgroup>
-          <colgroup style="width: 0;"></colgroup>
-          <colgroup style="width: 0;"></colgroup>
-          <colgroup style="width: 0;"></colgroup>
-          <colgroup style="width: 0;"></colgroup>
-          <colgroup style="width: 0;"></colgroup>
+          <colgroup></colgroup>
+          <colgroup></colgroup>
+          <colgroup></colgroup>
+          <colgroup></colgroup>
           <thead>
           <tr>
             <th colspan="2" class="item-desc">DESCRIPTION</th>
@@ -70,9 +67,6 @@
             <th class="item-qty">QTY</th>
             <th class="item-rate">RATE</th>
             <th class="item-total">AMT</th>
-            <th class="item-gst">CGST</th>
-            <th class="item-gst">SGST</th>
-            <th class="item-gst">IGST</th>
           </tr>
           </thead>
           <tbody>
@@ -86,12 +80,6 @@
             <td class="item-qty item-value">{{invoiceItem.quantity| number: '1.0-0'}}</td>
             <td class="item-rate item-value currency">{{invoiceItem.unitPrice | number: '1.2-2'}}</td>
             <td class="item-total item-value currency">{{invoiceItem.amount | number: numberFormat}}</td>
-            <td class="item-gst item-value currency">{{invoiceItem.cgstValue | number: numberFormat}}<p
-              class="item-gst-percent">({{invoiceItem.cgst}}%)</p></td>
-            <td class="item-gst item-value currency">{{invoiceItem.sgstValue | number: numberFormat}}<p
-              class="item-gst-percent">({{invoiceItem.sgst}}%)</p></td>
-            <td class="item-gst item-value currency">{{invoiceItem.igstValue | number: numberFormat}}<p
-              class="item-gst-percent">({{invoiceItem.igst}}%)</p></td>
           </tr>
           <tr>
             <td class="spacing-cell"></td>
@@ -100,34 +88,16 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr class="sub-total-row">
-            <td class="item-sno"></td>
-            <td class="item-desc sub-total">Total</td>
-            <td class="item-hsn item-value"></td>
-            <td class="item-qty item-value"></td>
-            <td class="item-rate item-value currency"></td>
-            <td class="item-total item-value currency">{{invoice.amount | number: '1.0-0'}}</td>
-            <td class="item-gst item-value currency">{{invoice.totalCGSTValue | number: '1.0-0'}}</td>
-            <td class="item-gst item-value currency">{{invoice.totalSGSTValue | number: '1.0-0'}}</td>
-            <td class="item-gst item-value currency">{{invoice.totalIGSTValue | number: '1.0-0'}}</td>
           </tr>
           </tbody>
           <tfoot>
           <tr>
-            <td colspan="9" style="border-right: 1px solid black;">
+            <td colspan="6" style="border-right: 1px solid black;">
               <table style="width: 100%;">
                 <colgroup style="width: 50%;"></colgroup>
                 <colgroup style="width: 50%;"></colgroup>
                 <tr>
                   <td style="padding-left: 20px; padding-top: 10px; padding-bottom: 10px;">
-                    <div class="invoice-add-details">
-                      <p class="amount-word-title">Amount chargeable (in words)</p>
-                      <p class="amount-word">{{getNumberText(invoice.grandTotal)}}</p>
-                    </div>
                     <div class="bank-details-td">
                       <b>BANK DETAILS</b>
                       <table style="width: 100%;" class="bank-details">
@@ -158,48 +128,21 @@
                       </table>
                     </div>
                   </td>
-                  <td style="border-right: 0;">
+                  <td style="border-right: 0; vertical-align: top">
                     <table style="width: 100%;" class="total-table">
                       <tbody style="border-bottom: 0;">
                       <tr>
-                        <td class="title sub-total-title" style="padding-top: 10px;">Total Amount Before Tax</td>
-                        <td class="amount sub-total currency">{{invoice.amount | number: '1.0-0'}}
+                        <td class="title sub-total-title" style="padding: 10px 10px; border-bottom: 1px solid black;">Total Amount</td>
+                        <td class="amount sub-total currency"  style="padding: 10px 10px; border-bottom: 1px solid black;">{{invoice.amount | number: '1.0-0'}}
                       </tr>
                       <tr>
-                        <td class="title gst-component-title">Add - CGST</td>
-                        <td class="amount gst-component currency">
-                          {{invoice.totalCGSTValue | number: '1.0-0'}}
+                        <td colspan="2" style="padding: 10px;">
+                          <div class="invoice-add-details">
+                            <p class="amount-word-title">Amount chargeable (in words)</p>
+                            <p class="amount-word">{{getNumberText(invoice.amount)}}</p>
+                          </div>
                         </td>
-                      </tr>
-                      <tr>
-                        <td class="title gst-component-title">Add - SGST</td>
-                        <td class="amount gst-component currency">
-                          {{invoice.totalSGSTValue | number: '1.0-0'}}
-                        </td>
-                      </tr>
-                      <tr>
-                        <td class="title gst-component-title">Add - IGST</td>
-                        <td class="amount gst-component currency">
-                          {{invoice.totalIGSTValue | number: '1.0-0'}}
-                        </td>
-                      </tr>
-                      <tr>
-                        <td class="title gst-title">Total GST</td>
-                        <td class="amount gst currency">
-                          {{invoice.totalGSTValue | number: '1.0-0'}}
-                        </td>
-                      </tr>
-                      <tr>
-                        <td class="title grand-total-title">Total Amount After Tax</td>
-                        <td class="amount grand-total currency">
-                          {{invoice.grandTotal | number: '1.0-0'}}
-                        </td>
-                      </tr>
-                      <tr>
-                        <td class="title gst-component-title" style="padding-bottom: 10px;">
-                          GST Payable on Reverse Charge
-                        </td>
-                        <td colspan="1" class="amount gst-component currency" style="vertical-align: initial;">NA</td>
+                        <td></td>
                       </tr>
                       </tbody>
                     </table>
