--- a/client/app/core/client/client-editor/client-editor.component.html
+++ b/client/app/core/client/client-editor/client-editor.component.html
@@ -76,6 +76,12 @@
                    formControlName="tin"
                    class="form-control">
           </div>
+          <div class="form-group">
+            <label class="control-label" for="gstin">GSTIN</label>
+            <input type="text" id="gstin"
+                   formControlName="gstin"
+                   class="form-control">
+          </div>
           <button type="submit" [disabled]="!clientForm.valid" class="btn btn-primary pull-right">Save</button>
           <div>
 
