--- a/client/app/core/invoice/gst/invoice-gst-editor/invoice-gst-editor.component.scss
+++ b/client/app/core/invoice/gst/invoice-gst-editor/invoice-gst-editor.component.scss
@@ -1,11 +1,31 @@
-.invoice-item {
-  .form-group {
-    margin-left: 0;
-    margin-right: 0;
+@media (min-width: 1200px) {
+  .form-main-div {
+    width: 950px;
+  }
+}
+
+.invoice-item-editor {
+
+  .item-control-div {
+    padding-left: 15px;
+    padding-right: 15px;
+    width: 40px;
+    float: left;
   }
 
-  label {
-    margin-bottom: 5px;
+  .item-control {
+    margin-top: 23px;
+    span.fa {
+      line-height: 1.6;
+    }
+  }
+
+  .item-description-div {
+    margin-left: 70px;
+    padding-right: 15px;
+  }
+  .item-description {
+    line-height: 1.7;
   }
 }
 
