--- a/client/app/core/invoice/bos/invoice-bos-print/invoice-bos-print.component.html
+++ b/client/app/core/invoice/bos/invoice-bos-print/invoice-bos-print.component.html
@@ -14,7 +14,7 @@
               <colgroup style="width: 90px;"></colgroup>
               <tr>
                 <td class="text-right" style="padding-right: 15px;">Invoice No:</td>
-                <td class="text-center">{{formatBillNumber(invoice._id)}}</td>
+                <td class="text-center">{{formatBillNumber()}}</td>
               </tr>
               <tr>
                 <td class="text-right" style="padding-right: 15px;">Invoice Date:</td>
@@ -94,15 +94,15 @@
           <tr>
             <td colspan="6" style="border-right: 1px solid black;">
               <table style="width: 100%;">
-                <colgroup style="width: 50%;"></colgroup>
-                <colgroup style="width: 50%;"></colgroup>
+                <colgroup style="width: 55%;"></colgroup>
+                <colgroup style="width: 45%;"></colgroup>
                 <tr>
-                  <td style="padding-left: 20px; padding-top: 10px; padding-bottom: 10px;">
+                  <td style="padding: 10px 20px;">
                     <div class="bank-details-td">
                       <b>BANK DETAILS</b>
                       <table style="width: 100%;" class="bank-details">
-                        <colgroup style="width: 30%;"></colgroup>
-                        <colgroup style="width: 70%;"></colgroup>
+                        <colgroup style="width: 35%;"></colgroup>
+                        <colgroup style="width: 65%;"></colgroup>
                         <tbody>
                         <tr>
                           <td>Account Name:</td>
