--- a/client/app/core/invoice/gst/invoice-gst-list/invoice-gst-list.component.html
+++ b/client/app/core/invoice/gst/invoice-gst-list/invoice-gst-list.component.html
@@ -38,25 +38,23 @@
         <td class="col-md-1 bill-date">Date</td>
         <td class="col-md-7 bill-client">Client</td>
         <td class="col-md-1 bill-total hidden-xs">Amount</td>
-        <td class="col-md-1 bill-total hidden-xs">VAT</td>
+        <td class="col-md-1 bill-total hidden-xs">GST</td>
         <td class="col-md-1 bill-total">Total</td>
       </tr>
       </thead>
       <tbody>
       <tr *ngFor="let invoice of invoiceList"
           (click)="setActive(invoice)"
-          (dblclick)="viewDetails();"
-          [ngClass]="{active: invoice._id == invoiceService.active._id}">
-        <td>{{ invoice._id }}</td>
+          (dblclick)="viewDetails()"
+          [ngClass]="{ active: invoice._id == invoiceService.active._id }">
+        <td>{{ invoice.getBillNumberText() }}</td>
         <td>{{ invoice.date | date: 'dd-MM-yyyy' }}</td>
         <td>{{ invoice.recipientName }}</td>
-        <td class="data-currency hidden-xs">{{ invoice.amount }}</td>
-        <td class="data-currency hidden-xs">{{ invoice.vatAmount }}</td>
-        <td class="data-currency">{{ invoice.grandTotal }}</td>
+        <td class="data-currency hidden-xs">{{ invoice.amount | number: '1.0-0' }}</td>
+        <td class="data-currency hidden-xs">{{ invoice.totalGSTValue | number: '1.0-0' }}</td>
+        <td class="data-currency">{{ invoice.grandTotal | number: '1.0-0' }}</td>
       </tr>
       </tbody>
     </table>
   </div>
 </div>
-
-
