--- a/client/assets/print/invoice-preview-tax.component.css
+++ b/client/assets/print/invoice-preview-tax.component.css
@@ -1,5 +1,6 @@
 body {
   font-size: 11px;
+  width: 165mm;
 }
 
 p {
@@ -16,7 +17,6 @@ h3 {
 }
 .client-details {
   float: left;
-  /*width: 430px;*/
   padding: 0;
 }
 
@@ -29,8 +29,6 @@ h3 {
 
 .invoice-details {
   font-size: 11px;
-  /*width: 213px;*/
-  /*float: right;*/
   padding: 0;
   margin-bottom: 15px;
 }
